# autoupwork-crew

./: README.md  main.py  pyproject.toml  test_driver.py  test_scraper.py  upwork_login.py  upwork_test.py
tools/: upwork_scraper.py
upwork-job-monitor/: .env  .env.example  README.md  requirements.txt
upwork-job-monitor/config/: settings.json
upwork-job-monitor/src/: chrome_test.py  headless_test.py  job_monitor.py  login.py  main.py  notification.py  security_question_test.py
upwork-job-monitor/src/utils/: config.py
